--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 # MongoDB Connection String
 # Get this from: https://www.mongodb.com/cloud/atlas
 # Format: mongodb+srv://username:password@cluster-url/database-name
-MONGODB_URI=mongodb+srv://username:password@your-cluster.mongodb.net/feedbackDB?retryWrites=true&w=majority
+MONGODB_URI=your_mongodb_connection_string_here
 
 # Server Port (optional, defaults to 5000)
 PORT=5000
